unpackaged/main/default/objects/Site_Programme__c/Site_Programme__c.object-meta.xml
<CustomObject>
    <description>The assignment of a programme to a specific site</description>
    <label>Site Programme</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Site Programme No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Programmes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>