unpackaged/main/default/objects/Site_Programme__c/fields/Application_Without_Nominated_Users__c.field-meta.xml
<CustomField>
    <fullName>Application_Without_Nominated_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is dynamically populated in memory based on the number of users nominated for a particular site programme. It powers the Users Nominated column on the on-boarding component.</description>
    <inlineHelpText>This field is dynamically populated in memory based on the number of users nominated for a particular site programme. It powers the Users Nominated column on the on-boarding component.</inlineHelpText>
    <label>Application Without Nominated Users</label>
    <type>Checkbox</type>
</CustomField>