unpackaged/main/default/objects/Site_Programme__c/fields/CADExchangeMethodPick__c.field-meta.xml
<CustomField>
    <fullName>CADExchangeMethodPick__c</fullName>
    <label>CAD Exchange Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JLR_CAD_Exchange_Methods</valueSetName>
    </valueSet>
</CustomField>