unpackaged/main/default/objects/Site_Programme__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description>Competitor (ETS)</description>
    <label>Competitor</label>
    <length>200</length>
    <type>Text</type>
</CustomField>