unpackaged/main/default/objects/Site_Programme__c/fields/Competitor_VMC__c.field-meta.xml
<CustomField>
    <fullName>Competitor_VMC__c</fullName>
    <description>Vendor Master Code (ETS)</description>
    <label>Competitor VMC</label>
    <length>5</length>
    <type>Text</type>
</CustomField>