unpackaged/main/default/objects/Site_Programme__c/fields/CPSCii__c.field-meta.xml
<CustomField>
    <fullName>CPSCii__c</fullName>
    <label>CPSCii</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JLR_CPSCii</valueSetName>
    </valueSet>
</CustomField>