unpackaged/main/default/objects/Site_Programme__c/fields/Full_Service_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Full_Service_Supplier__c</fullName>
    <label>Full Service Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>