unpackaged/main/default/objects/Site_Programme__c/fields/LL5_Approval__c.field-meta.xml
<CustomField>
    <fullName>LL5_Approval__c</fullName>
    <label>LL5 Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>