unpackaged/main/default/objects/Site_Programme__c/fields/LL5_Approval_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>LL5_Approval_Request_Date__c</fullName>
    <description>Date the LL5 Approval Email was sent out</description>
    <label>LL5 Approval Request Date</label>
    <type>Date</type>
</CustomField>