unpackaged/main/default/objects/Site_Programme__c/fields/LL5_Approved__c.field-meta.xml
<CustomField>
    <fullName>LL5_Approved__c</fullName>
    <formula>IF(TEXT(LL5_Approval__c) = 'Approved', TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL5 Approved?</label>
    <type>Checkbox</type>
</CustomField>