unpackaged/main/default/objects/Site_Programme__c/fields/LL5_Approver__c.field-meta.xml
<CustomField>
    <fullName>LL5_Approver__c</fullName>
    <description>Email Address of the LL5 Approver</description>
    <label>LL5 Approver</label>
    <type>Email</type>
</CustomField>