unpackaged/main/default/objects/Site_Programme__c/fields/LL5_Decision_Comments__c.field-meta.xml
<CustomField>
    <fullName>LL5_Decision_Comments__c</fullName>
    <description>Approval/rejection comments as provided by the LL5 Approver</description>
    <label>LL5 Decision Comments</label>
    <type>TextArea</type>
</CustomField>