unpackaged/main/default/objects/Site_Programme__c/fields/LL5_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>LL5_Decision_Date__c</fullName>
    <description>Date the approval/rejection was processed by the approver</description>
    <label>LL5 Decision Date</label>
    <type>Date</type>
</CustomField>