unpackaged/main/default/objects/Site_Programme__c/fields/LL5x_Approver__c.field-meta.xml
<CustomField>
    <fullName>LL5x_Approver__c</fullName>
    <formula>Programme__r.LL5ApproverEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL5 Approver</label>
    <type>Text</type>
</CustomField>