unpackaged/main/default/objects/Site_Programme__c/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <description>Supplier's Manufacturing Plant Code (ETS)</description>
    <label>Plant Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>