unpackaged/main/default/objects/Site_Programme__c/fields/PLM_Business_Role__c.field-meta.xml
<CustomField>
    <fullName>PLM_Business_Role__c</fullName>
    <label>PLM Business Role</label>
    <length>200</length>
    <type>Text</type>
</CustomField>