unpackaged/main/default/objects/Site_Programme__c/fields/PLM_Organisation__c.field-meta.xml
<CustomField>
    <fullName>PLM_Organisation__c</fullName>
    <label>PLM Organisation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>