unpackaged/main/default/objects/Site_Programme__c/fields/PLMOrgDivisionMultiPick__c.field-meta.xml
<CustomField>
    <fullName>PLMOrgDivisionMultiPick__c</fullName>
    <label>PLM Organisation Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JLR_Supplier_Org_Divisions</valueSetName>
    </valueSet>
</CustomField>