unpackaged/main/default/objects/Site_Programme__c/fields/Primary_Site_User_2__c.field-meta.xml
<CustomField>
    <fullName>Primary_Site_User_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Site User 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site Programmes (Primary Site User 2)</relationshipLabel>
    <relationshipName>Site_Programmes1</relationshipName>
    <type>Lookup</type>
</CustomField>