unpackaged/main/default/objects/Site_Programme__c/fields/Primary_Site_User__c.field-meta.xml
<CustomField>
    <fullName>Primary_Site_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is populated with the primary site user when the site programme is created.</description>
    <inlineHelpText>This is populated with the primary site user when the site programme is created.</inlineHelpText>
    <label>Primary Site User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site Programmes</relationshipLabel>
    <relationshipName>Site_Programmes</relationshipName>
    <type>Lookup</type>
</CustomField>