unpackaged/main/default/objects/Site_Programme__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The programme that this is an instance of</description>
    <inlineHelpText>The programme that this is an instance of</inlineHelpText>
    <label>Programme</label>
    <referenceTo>Programme__c</referenceTo>
    <relationshipLabel>Site Programmes</relationshipLabel>
    <relationshipName>Site_Programmes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>