unpackaged/main/default/objects/Site_Programme__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>The site which this programme is an instance of</description>
    <inlineHelpText>The site which this programme is an instance of</inlineHelpText>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Programmes</relationshipLabel>
    <relationshipName>Site_Programmes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>