unpackaged/main/default/objects/Site_Programme__c/fields/SiteProgrammeUID__c.field-meta.xml
<CustomField>
    <fullName>SiteProgrammeUID__c</fullName>
    <formula>Site__r.Id&amp;Programme__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SiteProgrammeUID</label>
    <type>Text</type>
</CustomField>