unpackaged/main/default/objects/Site_Programme__c/fields/Users_Nominated__c.field-meta.xml
<CustomField>
    <fullName>Users_Nominated__c</fullName>
    <description>This field is dynamically populated in memory with the number of users nominated for a particular site programme. It powers the Users Nominated column on the on-boarding component.</description>
    <inlineHelpText>This field is dynamically populated in memory with the number of users nominated for a particular site programme. It powers the Users Nominated column on the on-boarding component.</inlineHelpText>
    <label>Users Nominated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>