unpackaged/main/default/objects/Site_Programme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Programme__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>